# Geometria-Iuris

./: .gitignore
cls_pipeline/: .env.example  Dockerfile  METHODOLOGY.md  archive_run.py  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_single_experiment.py
cls_pipeline/notebooks/: exp01_tassonomia_emergente.ipynb  exp02_distanza_istituti.ipynb  exp02_gw_step_by_step.ipynb
cls_pipeline/notebooks/weird-sinic/: cls_pipeline.ipynb  exp02_gw_step_by_step_executed.ipynb  test_vector_arithmetic.ipynb
cls_pipeline/scripts/: test_analogy.py
cls_pipeline/src/: __init__.py  cli.py
cls_pipeline/src/core/: __init__.py  config_loader.py  device.py  hashing.py  output_manager.py
cls_pipeline/src/data/: __init__.py  build_dataset.py  parse_hk_doj.py
cls_pipeline/src/embeddings/: __init__.py  cache.py  client.py
cls_pipeline/src/experiments/: __init__.py  exp_axes.py  exp_clustering.py  exp_gw.py  exp_nda.py  exp_rsa.py  module_c_umap.py  multi_model.py  statistical.py  umap_viz.py
cls_pipeline/src/visualization/: __init__.py  config.py  generate_html.py
cls_pipeline/src/visualization/interactive/: __init__.py  html_builder.py  plotly_charts.py
cls_pipeline/src/visualization/png/: __init__.py  axes_plots.py  clustering_plots.py  common.py  gw_plots.py  multi_model_plots.py  nda_plots.py  rsa_plots.py  umap_plots.py
cls_pipeline/tests/: __init__.py  test_embeddings.py  test_experiments.py  test_multi_model.py
documenti/: 003_GeometriaIuris_Indice.docx  GeometriaIuris_PanoramicaTecnica.docx  TechnicalOverview_DAcquisto.md  reference.docx  tavola_esperimenti.docx  ~$ometriaIuris_PanoramicaTecnica.docx
documenti/fonti/: Engish.md  INDICE.txt  INDICE.txt.bak  Jean_LesAlgorithmesFontIlsLaLoi_2021.epub  Yuill_CriticalApproachesComputationalLaw_2019.html
experiments/: OVERVIEW.md  README.md  TRACE_TEMPLATE.md  build_combined.py  build_index.py  index.html  requirements.txt  trace_pivot_2lens.md
experiments/dashboard_v2/: compute_pca_all_models.py  dataset_data.json  dataset_pca3d.json  dataset_terms.json  generate_lens1.py  generate_lens4.py  index.html  lens4.html  shared_ui.py
experiments/data/: apply_decisions.py  build_attested_pool.py  build_dataset.py  parse_sources.py  (+9 more)
(+152 files in other folders)
